# jiuzhou

./: .dockerignore  .gitignore  AGENTS.md  README.md  RUST_BACKEND_REWRITE_PLAN.md  TRANSACTION_REFACTOR_PLAN.md  docker-build.bat  docker-build.ps1  docker-build.sh  docker-compose.local-fixture.yml  docker-compose.yml  docker-stack.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-dev.bat  start-prod.bat
server-rs/: .env.example  .gitignore  Cargo.toml  Dockerfile
server-rs/migrations/: 20260421134000_baseline.sql  20260421145500_ensure_online_battle_settlement_task.sql
server-rs/src/: battle_runtime.rs  idle_runtime.rs  lib.rs  main.rs  state.rs
server-rs/src/application/: mod.rs  reward_payload.rs
server-rs/src/auth/: mod.rs
server-rs/src/bootstrap/: app.rs  avatar_cleanup.rs  config.rs  generated_content_refresh.rs  item_data_cleanup.rs  lifecycle.rs  mod.rs  performance_indexes.rs  readiness.rs  shutdown.rs  startup.rs
server-rs/src/config/: app_config.rs  mod.rs
server-rs/src/http/: account.rs  achievement.rs  afdian.rs  arena.rs  attribute.rs  auth.rs  battle.rs  battle_pass.rs  battle_session.rs  character.rs  character_technique.rs  dungeon.rs  game.rs  idle.rs  (+26 more)
server-rs/tests/: account_route_contract_test.rs  achievement_route_contract_test.rs  afdian_route_contract_test.rs  arena_route_contract_test.rs  attribute_route_contract_test.rs  auth_route_contract_test.rs  battle_engine_contract_test.rs  battle_pass_route_contract_test.rs  battle_runtime_recovery_test.rs  battle_session_route_contract_test.rs  bootstrap_health_test.rs  character_create_route_contract_test.rs  character_position_route_contract_test.rs  character_rename_route_contract_test.rs  character_route_contract_test.rs  character_settings_route_contract_test.rs  character_technique_route_contract_test.rs  dungeon_route_contract_test.rs  game_route_contract_test.rs  game_socket_auth_test.rs  http_contract_test.rs  idle_recovery_test.rs  idle_route_contract_test.rs  info_route_contract_test.rs  infra_codecs_test.rs  infra_config_test.rs  insight_route_contract_test.rs  inventory_route_contract_test.rs  lifecycle_listen_before_startup_ready_test.rs  mail_route_contract_test.rs  map_route_contract_test.rs  month_card_route_contract_test.rs  rank_route_contract_test.rs  recovery_kernel_test.rs  redeem_code_route_contract_test.rs  redis_codec_golden_test.rs  session_projection_test.rs  session_registry_test.rs  shutdown_drain_test.rs  sign_in_route_contract_test.rs  (+8 more)
(+988 files in other folders)
